finished review pictures

--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles/fa.css" />
     <link rel="stylesheet" href="styles/home.css" />
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link rel="stylesheet" href="styles/fa.css" />
+    
     <!-- <link rel="stylesheet" href="styles/reviews.css"> -->
 
     <link
@@ -263,7 +264,7 @@
         <!-- <h1>Reviews</h1> -->
         <div class="reviews">
           <div>
-            <img src="images/reviews/reviews1.jpg" class="avatar" alt="John" />
+            <img src="images/reviews/john.jpg" class="avatar" alt="John" />
             <span class="nameloc">
               <strong>John - </strong>
               <i>Rigby</i>
@@ -277,7 +278,7 @@
           </div>
           <div>
             <img
-              src="images/reviews/reviews2.jpg"
+              src="images/reviews/leslie.jpg"
               class="avatar"
               alt="Leslie"
             />
@@ -295,7 +296,7 @@
           </div>
           <div>
             <img
-              src="images/reviews/reviews3.jpg"
+              src="images/reviews/dennis.jpg"
               class="avatar"
               alt="Dennis"
             />
@@ -311,7 +312,7 @@
             </p>
           </div>
           <div>
-            <img src="images/reviews/reviews4.png" class="avatar" alt="Raj" />
+            <img src="images/reviews/raj.jpg" class="avatar" alt="Raj" />
             <span class="nameloc">
               <strong id="name">Raj - </strong>
               <i id="location">Pocatello</i>
