--- a/loanEstimator.html
+++ b/loanEstimator.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="styles/fa.css" />
     <link rel="stylesheet" href="styles/normalize.css" />
     <link rel="stylesheet" href="styles/home.css" />
+    <link rel="stylesheet" href="styles/loan-estimator.css" />
     <title>Document</title>
   </head>
   <body>
@@ -26,9 +27,9 @@
           <li>
             <a href="about.html"> About </a>
           </li>
-          <li>
+          <!-- <li>
             <a href="productListing.html"> Inventory </a>
-          </li>
+          </li> -->
           <li>
             <a href="loanEstimator.html"> Loan Estimator </a>
           </li>
