working on loan estimator page

--- a/loanEstimator.html
+++ b/loanEstimator.html
@@ -41,6 +41,8 @@
       </nav>
     </header>
     <main>
+      <div class="loanPage">
+      <img id ="loanImage" src="images/loanEstimator.png">
       <h1 class="loanHero">Loan Estimator</h1>
       <div class="loanContent">
         <div class="calculator">
@@ -111,6 +113,7 @@
           <hr />
           <h1>$<span id="mp"></span>/mo</h1>
         </div>
+      </div>
       </div>
     </main>
     <footer>
