fixing borken links

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <a href="../productListing.html"> Inventory </a>
         </li> -->
         <li>
-          <a href="../loanEstimator.html"> Loan Estimator </a>
+          <a href="loanEstimator.html"> Loan Estimator </a>
         </li>
         <li>
           <a href="about.html#contact-us"> Contact Us </a>
