fixed chatbox image

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="chatbox-message-header">
           <div class="img_and_name_status">
             <div class="chatbox-message-image">
-              <img src="/images/chatbox_photo.jpg" alt="" />
+              <img src="images/chatbox_photo.jpg" alt="" />
             </div>
             <div>
               <h4 class="chatbox-message-name">Grant Cross</h4>
