finished loan etimator

--- a/loanEstimator.html
+++ b/loanEstimator.html
@@ -43,6 +43,7 @@
     <main>
       <div class="loanPage">
       <img id ="loanImage" src="images/loanEstimator.png">
+      <div class="loanP">
       <h1 class="loanHero">Loan Estimator</h1>
       <div class="loanContent">
         <div class="calculator">
@@ -113,6 +114,7 @@
           <hr />
           <h1>$<span id="mp"></span>/mo</h1>
         </div>
+      </div>
       </div>
       </div>
     </main>
