--- a/chatbox.html
+++ b/chatbox.html
@@ -16,7 +16,7 @@
         <div class="chatbox-message-wrapper">
             <div class="chatbox-message-header">
                 <div class="chatbox-message-image">
-                    <img src="/chatbox_photo.jpg" alt="">
+                    <img src="/chatbox_photo.jpg" alt="Grant">
                     <div>
                        <h4 class="chatbox-message-name">Grant Cross</h4> 
                        <p class="chatbox-message-status">online</p>
