--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
         <div class="chatbox-message-header">
           <div class="img_and_name_status">
             <div class="chatbox-message-image">
-              <img src="images/chatbox_photo.jpg" alt="" />
+              <img src="images/chatbox_photo.jpg" alt="Grant" />
             </div>
             <div>
               <h4 class="chatbox-message-name">Grant Cross</h4>
@@ -121,7 +121,7 @@
               class="sub_vehicle"
               id="Trucks"
               src="images/sub_trucks.jpg"
-              alt=""
+              alt="Truck"
           /></a>
 
           <a href="productListing.html"
@@ -129,7 +129,7 @@
               class="sub_vehicle"
               id="Coupes"
               src="images/sub_coupes.jpg"
-              alt=""
+              alt="Coupe"
           /></a>
         </div>
         <div class="makesRowB">
@@ -138,7 +138,7 @@
               class="sub_vehicle"
               id="Hatchbacks"
               src="images/sub_hatchbacks.jpg"
-              alt=""
+              alt="Hatchback"
           /></a>
 
           <a href="productListing.html"
@@ -146,7 +146,7 @@
               class="sub_vehicle"
               id="Electric"
               src="images/sub_electric.jpg"
-              alt=""
+              alt="Electric"
           /></a>
         </div>
         <div class="makesRowC">
@@ -155,7 +155,7 @@
               class="sub_vehicle"
               id="SUVs"
               src="images/sub_suvs.jpg"
-              alt=""
+              alt="SUV"
             />
           </a>
 
@@ -164,7 +164,7 @@
               class="sub_vehicle"
               id="Sedans"
               src="images/sub_sedans.jpg"
-              alt=""
+              alt="Sedan"
             />
           </a>
         </div>
@@ -180,72 +180,72 @@
         <div class="carousel">
           <div class="slide" id="slide1">
             <a href="productListing.html"
-              ><img src="images/Coupes/IMG_1216.jpeg" alt=""
+              ><img src="images/Coupes/IMG_1216.jpeg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a href="productListing.html"
-              ><img src="images/Electric/IMG_1017.JPG" alt=""
+              ><img src="images/Electric/IMG_1017.JPG" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a href="productListing.html"
-              ><img src="images/Hatchbacks/hatchbacks-3.jpeg" alt=""
+              ><img src="images/Hatchbacks/hatchbacks-3.jpeg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a href="productListing.html"
-              ><img src="images/Sedans/IMG_1137.jpeg" alt=""
+              ><img src="images/Sedans/IMG_1137.jpeg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a href="productListing.html"
-              ><img src="images/SUVs/IMG_1056.JPG" alt=""
+              ><img src="images/SUVs/IMG_1056.JPG" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a href="productListing.html"
-              ><img src="images/Coupes/IMG_1218.jpeg" alt=""
+              ><img src="images/Coupes/IMG_1218.jpeg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a href="productListing.html"
-              ><img src="images/Electric/IMG_1019.JPG" alt=""
+              ><img src="images/Electric/IMG_1019.JPG" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a href="productListing.html"
-              ><img src="images/Hatchbacks/hatchbacks-7.jpeg" alt=""
+              ><img src="images/Hatchbacks/hatchbacks-7.jpeg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a href="productListing.html"
-              ><img src="images/Sedans/IMG_1138.jpeg" alt=""
+              ><img src="images/Sedans/IMG_1138.jpeg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a href="productListing.html"
-              ><img src="images/SUVs/IMG_1057.JPG" alt=""
+              ><img src="images/SUVs/IMG_1057.JPG" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a href="productListing.html"
-              ><img src="images/Coupes/IMG_1219.jpeg" alt=""
+              ><img src="images/Coupes/IMG_1219.jpeg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a href="productListing.html"
-              ><img src="images/Electric/IMG_1023.JPG" alt=""
+              ><img src="images/Electric/IMG_1023.JPG" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a href="productListing.html"
-              ><img src="images/Hatchbacks/hatchbacks-6.jpeg" alt=""
+              ><img src="images/Hatchbacks/hatchbacks-6.jpeg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a href="productListing.html"
-              ><img src="images/Sedans/IMG_1139.jpeg" alt=""
+              ><img src="images/Sedans/IMG_1139.jpeg" alt="Vehicle"
             /></a>
           </div>
         </div>
