--- a/productListing/productListing.html
+++ b/productListing/productListing.html
@@ -28,35 +28,35 @@
         <div class="makesRowA">
           <a
             href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-            ><img class="sub_truck" src="images/sub_truck.jpg" alt=""
+            ><img class="sub_truck" src="images/sub_truck.jpg" alt="Vehicle"
           /></a>
 
           <a
             href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-            ><img class="sub_coupes" src="images/sub_coupes.jpg" alt=""
+            ><img class="sub_coupes" src="images/sub_coupes.jpg" alt="Vehicle"
           /></a>
         </div>
         <div class="makesRowB">
           <a
             href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-            ><img class="sub_hatchbacks" src="images/sub_hatchbacks.jpg" alt=""
+            ><img class="sub_hatchbacks" src="images/sub_hatchbacks.jpg" alt="Vehicle"
           /></a>
 
           <a
             href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-            ><img class="sub_electric" src="images/sub_electric.jpg" alt=""
+            ><img class="sub_electric" src="images/sub_electric.jpg" alt="Vehicle"
           /></a>
         </div>
         <div class="makesRowC">
           <a
             href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-            ><img class="sub_suvs" src="images/sub_suvs.jpg" alt="" />
+            ><img class="sub_suvs" src="images/sub_suvs.jpg" alt="Vehicle" />
           </a>
 
           <a
             href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
           >
-            <img class="sub_sedans" src="images/sub_sedans.jpg" alt="" />
+            <img class="sub_sedans" src="images/sub_sedans.jpg" alt="Vehicle" />
           </a>
         </div>
       </div>
@@ -72,85 +72,85 @@
           <div class="slide" id="slide1">
             <a
               href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-              ><img src="./images/car_1.jpg" alt=""
+              ><img src="./images/car_1.jpg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-              ><img src="./images/car_2.jpg" alt=""
+              ><img src="./images/car_2.jpg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-              ><img src="./images/car_3.jpg" alt=""
+              ><img src="./images/car_3.jpg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-              ><img src="./images/car_4.jpg" alt=""
+              ><img src="./images/car_4.jpg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-              ><img src="./images/car_5.jpg" alt=""
+              ><img src="./images/car_5.jpg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-              ><img src="./images/car_6.jpg" alt=""
+              ><img src="./images/car_6.jpg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-              ><img src="./images/car_7.jpg" alt=""
+              ><img src="./images/car_7.jpg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-              ><img src="./images/car_1.jpg" alt=""
+              ><img src="./images/car_1.jpg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-              ><img src="./images/car_2.jpg" alt=""
+              ><img src="./images/car_2.jpg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-              ><img src="./images/car_3.jpg" alt=""
+              ><img src="./images/car_3.jpg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-              ><img src="./images/car_4.jpg" alt=""
+              ><img src="./images/car_4.jpg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-              ><img src="./images/car_5.jpg" alt=""
+              ><img src="./images/car_5.jpg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-              ><img src="./images/car_6.jpg" alt=""
+              ><img src="./images/car_6.jpg" alt="Vehicle"
             /></a>
           </div>
           <div class="slide" id="slide1">
             <a
               href="https://gmcrm.github.io/wdd_230/Final_Project_guitar_website/home.html"
-              ><img src="./images/car_7.jpg" alt=""
+              ><img src="./images/car_7.jpg" alt="Vehicle"
             /></a>
           </div>
         </div>
@@ -160,19 +160,19 @@
     <!-- chat box -->
     <div class="chatbox-wrapper">
       <div class="chatbox-toggle">
-        <img class="message-dots" src="" alt="" />
+        <img class="message-dots" src="" alt="Dots" />
       </div>
       <div class="chatbox-message-wrapper">
         <div class="chatbox-message-header">
           <div class="chatbox-message-profile">
-            <img src="images/chat_box_user.jpg" alt="" />
+            <img src="images/chat_box_user.jpg" alt="User" />
             <div>
               <h4 class="chatbox-message-name">Grant Cross</h4>
               <p class="chatbox-message-status">online</p>
             </div>
           </div>
           <div class="chatbox-message-dropdown">
-            <img src="" alt="" />
+            <img src="" alt="Dropdown" />
             <ul class="chatbox-message-dropdown-menu">
               <li>
                 <a href="#">Search</a>
@@ -207,7 +207,7 @@
               class="chatbox-message-input"
             ></textarea>
             <button type="submit" class="chatbox-message-submit">
-              <img src="" alt="" />
+              <img src="" alt="Submit" />
             </button>
           </form>
         </div>
