--- a/index.html
+++ b/index.html
@@ -179,74 +179,60 @@
 
         <div class="carousel">
           <div class="slide" id="slide1">
-            <a href="productListing.html"
-              ><img src="images/Coupes/IMG_1216.jpeg" alt=""
-            /></a>
+            <img src="images/Coupes/IMG_1216.jpeg" alt=""
+            />
           </div>
-          <div class="slide" id="slide1">
-            <a href="productListing.html"
-              ><img src="images/Electric/IMG_1017.JPG" alt=""
-            /></a>
+          <div class="slide" id="slide2">
+            <img src="images/Electric/IMG_1017.JPG" alt=""
+            />
           </div>
-          <div class="slide" id="slide1">
-            <a href="productListing.html"
-              ><img src="images/Hatchbacks/hatchbacks-3.jpeg" alt=""
-            /></a>
+          <div class="slide" id="slide3">
+            <img src="images/Hatchbacks/hatchbacks-3.jpeg" alt=""
+            />
           </div>
-          <div class="slide" id="slide1">
-            <a href="productListing.html"
-              ><img src="images/Sedans/IMG_1137.jpeg" alt=""
-            /></a>
+          <div class="slide" id="slide4">
+            <img src="images/Sedans/IMG_1137.jpeg" alt=""
+            />
           </div>
-          <div class="slide" id="slide1">
-            <a href="productListing.html"
-              ><img src="images/SUVs/IMG_1056.JPG" alt=""
-            /></a>
+          <div class="slide" id="slide5">
+            <img src="images/SUVs/IMG_1056.JPG" alt=""
+            />
           </div>
-          <div class="slide" id="slide1">
-            <a href="productListing.html"
-              ><img src="images/Coupes/IMG_1218.jpeg" alt=""
-            /></a>
+          <div class="slide" id="slide6">
+            <img src="images/Coupes/IMG_1218.jpeg" alt=""
+            />
           </div>
-          <div class="slide" id="slide1">
-            <a href="productListing.html"
-              ><img src="images/Electric/IMG_1019.JPG" alt=""
-            /></a>
+          <div class="slide" id="slide7">
+            <img src="images/Electric/IMG_1019.JPG" alt=""
+            />
           </div>
-          <div class="slide" id="slide1">
-            <a href="productListing.html"
-              ><img src="images/Hatchbacks/hatchbacks-7.jpeg" alt=""
-            /></a>
+          <div class="slide" id="slide8">
+            <img src="images/Hatchbacks/hatchbacks-7.jpeg" alt=""
+            />
           </div>
-          <div class="slide" id="slide1">
-            <a href="productListing.html"
-              ><img src="images/Sedans/IMG_1138.jpeg" alt=""
-            /></a>
+          <div class="slide" id="slide9">
+            <img src="images/Sedans/IMG_1138.jpeg" alt=""
+            />
           </div>
-          <div class="slide" id="slide1">
-            <a href="productListing.html"
-              ><img src="images/SUVs/IMG_1057.JPG" alt=""
-            /></a>
+          <div class="slide" id="slide10">
+            <img src="images/SUVs/IMG_1057.JPG" alt=""
+            />
           </div>
-          <div class="slide" id="slide1">
-            <a href="productListing.html"
-              ><img src="images/Coupes/IMG_1219.jpeg" alt=""
-            /></a>
+          <div class="slide" id="slide11">
+            <img src="images/Coupes/IMG_1219.jpeg" alt=""
+            />
           </div>
-          <div class="slide" id="slide1">
-            <a href="productListing.html"
-              ><img src="images/Electric/IMG_1023.JPG" alt=""
-            /></a>
+          <div class="slide" id="slide12">
+            <img src="images/Electric/IMG_1023.JPG" alt=""
+            />
           </div>
-          <div class="slide" id="slide1">
-            <a href="productListing.html"
-              ><img src="images/Hatchbacks/hatchbacks-6.jpeg" alt=""
-            /></a>
+          <div class="slide" id="slide13">
+            <img src="images/Hatchbacks/hatchbacks-6.jpeg" alt=""
+            />
           </div>
-          <div class="slide" id="slide1">
-            <a href="productListing.html"
-              ><img src="images/Sedans/IMG_1139.jpeg" alt=""
-            /></a>
+          <div class="slide" id="slide14">
+            <img src="images/Sedans/IMG_1139.jpeg" alt=""
+            />
           </div>
         </div>
         <button class="right-button" onclick="goRight()">></button>
