--- a/index.html
+++ b/index.html
@@ -179,59 +179,59 @@
 
         <div class="carousel">
           <div class="slide" id="slide1">
-            <img src="images/Coupes/IMG_1216.jpeg" alt=""
+            <img src="images/Coupes/IMG_1216.jpeg" alt="Coupe"
             />
           </div>
           <div class="slide" id="slide2">
-            <img src="images/Electric/IMG_1017.JPG" alt=""
+            <img src="images/Electric/IMG_1017.JPG" alt="Electric"
             />
           </div>
           <div class="slide" id="slide3">
-            <img src="images/Hatchbacks/hatchbacks-3.jpeg" alt=""
+            <img src="images/Hatchbacks/hatchbacks-3.jpeg" alt="Hatchbacks"
             />
           </div>
           <div class="slide" id="slide4">
-            <img src="images/Sedans/IMG_1137.jpeg" alt=""
+            <img src="images/Sedans/IMG_1137.jpeg" alt="Sedan"
             />
           </div>
           <div class="slide" id="slide5">
-            <img src="images/SUVs/IMG_1056.JPG" alt=""
+            <img src="images/SUVs/IMG_1056.JPG" alt="SUV"
             />
           </div>
           <div class="slide" id="slide6">
-            <img src="images/Coupes/IMG_1218.jpeg" alt=""
+            <img src="images/Coupes/IMG_1218.jpeg" alt="Coupe"
             />
           </div>
           <div class="slide" id="slide7">
-            <img src="images/Electric/IMG_1019.JPG" alt=""
+            <img src="images/Electric/IMG_1019.JPG" alt="Electric"
             />
           </div>
           <div class="slide" id="slide8">
-            <img src="images/Hatchbacks/hatchbacks-7.jpeg" alt=""
+            <img src="images/Hatchbacks/hatchbacks-7.jpeg" alt="Hatchback"
             />
           </div>
           <div class="slide" id="slide9">
-            <img src="images/Sedans/IMG_1138.jpeg" alt=""
+            <img src="images/Sedans/IMG_1138.jpeg" alt="Sedan"
             />
           </div>
           <div class="slide" id="slide10">
-            <img src="images/SUVs/IMG_1057.JPG" alt=""
+            <img src="images/SUVs/IMG_1057.JPG" alt="SUV"
             />
           </div>
           <div class="slide" id="slide11">
-            <img src="images/Coupes/IMG_1219.jpeg" alt=""
+            <img src="images/Coupes/IMG_1219.jpeg" alt="Coupe"
             />
           </div>
           <div class="slide" id="slide12">
-            <img src="images/Electric/IMG_1023.JPG" alt=""
+            <img src="images/Electric/IMG_1023.JPG" alt="Electric"
             />
           </div>
           <div class="slide" id="slide13">
-            <img src="images/Hatchbacks/hatchbacks-6.jpeg" alt=""
+            <img src="images/Hatchbacks/hatchbacks-6.jpeg" alt="Hatchback"
             />
           </div>
           <div class="slide" id="slide14">
-            <img src="images/Sedans/IMG_1139.jpeg" alt=""
+            <img src="images/Sedans/IMG_1139.jpeg" alt="Sedan"
             />
           </div>
         </div>
